# ombrac

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release-binary.yml  release-library.yml  release-ombrac-client.yml  release-ombrac-protocol.yml  release-ombrac-server.yml  release.yml
benches/: Cargo.toml  request.rs
benches/benches/: concurrency.rs  e2e_quic.rs  latency.rs  netstack.rs  throughput.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/connect/: stream.rs
crates/client/src/endpoint/: mod.rs
crates/client/src/endpoint/socks/: mod.rs  server.rs
crates/client/src/macros/: trace.rs
crates/client/src/socks/: mod.rs
crates/client/src/transport/quic/: client.rs  connection.rs  mod.rs  stream.rs
crates/ombrac/: Cargo.toml
crates/ombrac-client/: Cargo.toml  build.rs  ombrac_client.h
crates/ombrac-client/src/: client.rs  config.rs  ffi.rs  lib.rs  logging.rs  service.rs
crates/ombrac-client/src/config/: cli.rs  json.rs  mod.rs
crates/ombrac-client/src/connection/: datagram.rs  mod.rs  stream.rs
crates/ombrac-client/src/endpoint/: http.rs  mod.rs  socks.rs  tun.rs
crates/ombrac-client/src/endpoint/socks/: mod.rs  protocol.rs
crates/ombrac-client/src/endpoint/socks/v5/: mod.rs
crates/ombrac-client/src/logging/: binary.rs
crates/ombrac-client/src/macros/: trace.rs
crates/ombrac-client/src/transport/: quic.rs
crates/ombrac-client/src/transport/quic/: client.rs  mod.rs
crates/ombrac-macros/: Cargo.toml
crates/ombrac-macros/src/: lib.rs  trace.rs
crates/ombrac-netstack/: Cargo.toml
crates/ombrac-netstack/src/: buffer.rs  device.rs  lib.rs  stack.rs  tcp.rs  udp.rs
crates/ombrac-server/: Cargo.toml  build.rs  ombrac_server.h
crates/ombrac-server/src/: config.rs  dns.rs  ffi.rs  lib.rs  logging.rs  server.rs  service.rs
crates/ombrac-server/src/config/: cli.rs  json.rs  mod.rs
crates/ombrac-server/src/connection/: datagram.rs  dns.rs  mod.rs  stream.rs
crates/ombrac-server/src/logging/: ffi.rs  mod.rs
crates/ombrac-server/src/macros/: trace.rs
crates/ombrac-server/src/transport/: mod.rs  quic.rs
crates/ombrac-server/src/transport/quic/: mod.rs  server.rs
crates/ombrac-transport/: Cargo.toml
crates/ombrac-transport/src/: io.rs  lib.rs
crates/ombrac-transport/src/quic/: client.rs  datagram.rs  error.rs  mod.rs  server.rs  stream.rs
crates/ombrac-transport/tests/: quic.rs  support.rs
crates/ombrac/src/: address.rs  associate.rs  client.rs  codec.rs  connect.rs  io.rs  lib.rs  metrics.rs  packet.rs  protocol.rs  reassembly.rs  request.rs  server.rs
crates/ombrac/tests/: tunnel.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: client.rs  io.rs  lib.rs  request.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/connect/: connection.rs  mod.rs  stream.rs
crates/server/src/transport/quic/: connection.rs  mod.rs  server.rs  stream.rs
docs/: cli-reference.md  configuration.md
ombrac-client/: Cargo.toml
ombrac-client/src/: main.rs
ombrac-client/src/connect/: connection.rs
ombrac-client/src/socks/: mod.rs
ombrac-protocol/: Cargo.toml
ombrac-protocol/src/: client.rs  lib.rs  request.rs  response.rs  server.rs
ombrac-server/: Cargo.toml
ombrac-server/src/: main.rs
ombrac-server/src/connect/: connection.rs  stream.rs
ombrac-server/src/dns/: mod.rs
scripts/: build_xcframework_ombrac_client.sh
tests/integration/: Cargo.toml
tests/integration/src/: auth_version.rs  binary.rs  drain_shutdown.rs  e2e_real_transport.rs  endpoint_error_handling.rs  endpoint_http.rs  endpoint_socks.rs  lib.rs  ombrac_service.rs  quic.rs  service.rs  tcp_edge_cases.rs  tcp_state_sync.rs  tcp_timeout.rs  tls_modes.rs  udp_edge_cases.rs  udp_stress.rs
tests/support/: Cargo.toml
tests/support/src/: binary.rs  cert.rs  lib.rs  mock_transport.rs  net.rs  path.rs  process.rs
tests/test-integration/: Cargo.toml
tests/test-support/: Cargo.toml
tests/test-support/src/mock/: tcp.rs
