[workspace]
resolver = "2"
members = [
    "crates/ombrac",
    "crates/ombrac-client",
    "crates/ombrac-server",
    "crates/ombrac-macros",
    "crates/ombrac-transport",

    "tests/integration",
    "tests/support"
]

[workspace.package]
version = "0.2.6"
edition = "2021"
license = "Apache-2.0"
authors = ["Contributors"]
repository = "https://github.com/ombrac/ombrac"
description = "Safe, fast, small TCP tunnel using Rust"
keywords = ["proxy", "firewall"]

[workspace.dependencies]
# ombrac
ombrac = { version = "0.2.6", path = "crates/ombrac", default-features = false }
ombrac-client = { version = "0.2.6", path = "crates/ombrac-client", default-features = false }
ombrac-server = { version = "0.2.6", path = "crates/ombrac-server", default-features = false }
ombrac-macros = { version = "0.2.6", path = "crates/ombrac-macros", default-features = false }
ombrac-transport = { version = "0.2.6", path = "crates/ombrac-transport", default-features = false }

futures = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
bytes = { version = "1", default-features = false }
async-channel = { version = "2", default-features = false }

# socks
socks-lib = { version = "0.1", default-features = false }

# binary
clap = { version = "4", default-features = false }

# quic
quinn = { version = "0.11", default-features = false }
rustls = { version = "0.23", default-features = false }
aws-lc-rs = { version = "1", default-features = false }
webpki-roots = { version = "0.26", default-features = false }
rustls-pemfile = { version = "2.2", default-features = false }

# logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# dev dependencies
curl = { version = "0.4", default-features = false }
rcgen = { version = "0.13", default-features = false }

# benches
criterion = { version = "0.5", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
