[package]
name = "benches"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dependencies]
tests-support = { path = "../tests/support" }

ombrac = { workspace = true }
ombrac-client = { workspace = true }
ombrac-server = { workspace = true }
criterion = { workspace = true, features = ["default"] }


[lints]
workspace = true
