[package]
name = "benches"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dependencies]
ombrac = { workspace = true }
criterion = { workspace = true, features = ["default", "async_tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
bytes = { workspace = true, features = ["std"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "concurrency"
harness = false

[lints]
workspace = true
