[package]
name = "ombrac-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["udp", "trace", "aws-lc-rs", "limit-connection-reuses"]
udp = ["ombrac-protocol/udp"]
trace = ["tracing", "tracing-subscriber"]
limit-connection-reuses = []

[dependencies]
ombrac-protocol = { path = "../ombrac-protocol", features = ["s2n-quic"], default-features = false }
socks = { git = "https://github.com/ombrac/socks.git" }

clap = { version = "4", features = ["derive", "color", "help", "usage", "error-context", "suggestions"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"], default-features = false }

# Logging
tracing = { version = "0.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = ["ansi"], default-features = false, optional = true }

# QUIC protocol impl
# https://aws.github.io/aws-lc-rs/platform_support.html
s2n-quic = { version = "1", features = ["provider-tls-default", "provider-address-token-default"], default-features = false }
aws-lc-rs = { version = "1", features = ["bindgen"], default-features = false, optional = true }