[package]
name = "ombrac-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["udp", "aws-lc-rs"]
udp = ["ombrac-protocol/udp"]

[dependencies]
ombrac-protocol = { path = "../ombrac-protocol", features = ["s2n-quic"], default-features = false }

clap = { version = "4", features = ["std", "derive", "color", "help", "usage", "error-context", "suggestions"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"], default-features = false }
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-rustls", "native-certs"], default-features = false }

# QUIC protocol impl
# https://aws.github.io/aws-lc-rs/platform_support.html
s2n-quic = { version = "1", features = ["provider-tls-default", "provider-address-token-default"], default-features = false }
aws-lc-rs = { version = "1", features = ["bindgen"], default-features = false, optional = true }