[package]
name = "ombrac-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ombrac-client"
path = "bin/main.rs"
required-features = ["binary"]

[features]
default = [
    "endpoint-default",
    "transport-default",
    "tracing",
    "udp",
]

udp = ["ombrac-protocol/udp"]
tracing = ["dep:tracing"]

endpoint-default = ["endpoint-socks"]
endpoint-socks = ["socks"]

transport-default = ["transport-quic"]
transport-quic = ["s2n-quic", "aws-lc-rs", "ombrac-protocol/s2n-quic"]

binary = [
    "clap",
    "tokio/macros",
    "tokio/rt-multi-thread",
    "tracing-subscriber",
]

[dependencies]
ombrac-protocol = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "io-util"] }
clap = { workspace = true, features = ["std", "derive", "color", "help", "usage", "error-context", "suggestions"], optional = true }
s2n-quic = { workspace = true, features = ["provider-tls-default", "provider-address-token-default"], optional = true }
aws-lc-rs = { workspace = true, features = ["bindgen"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["ansi"], optional = true }

socks = { git = "https://github.com/ombrac/socks.git", optional = true }

[lints]
workspace = true