[package]
name = "ombrac-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tracing = { workspace = true, optional = true }

[lints]
workspace = true
