[package]
name = "ombrac-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"

[[bin]]
name = "ombrac-server"
path = "bin/main.rs"


[features]
default = [
    "tracing",
    "transport-default"
]

tracing = [
    "dep:tracing", 
    "dep:tracing-appender",
    "dep:tracing-subscriber",
    "ombrac-transport/tracing"
]

transport-default = ["transport-quic"]
transport-quic = ["ombrac-transport/quic"]

datagram = [
    "ombrac/datagram", 
    "ombrac-transport/datagram"
]

[dependencies]
ombrac = { workspace = true }
ombrac-macros = { workspace = true }
ombrac-transport = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
clap = { workspace = true, features = ["std", "derive", "color", "help", "usage", "error-context", "suggestions"] }
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true}
tracing-subscriber = { workspace = true, features = ["ansi"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true