[package]
name = "ombrac-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[features]
default = ["quic"]
tracing = ["dep:tracing"]

quic = ["quinn", "rustls", "rustls-pemfile", "aws-lc-rs", "webpki-roots"]

[dependencies]
ombrac = { workspace = true }
ombrac-macros = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
async-channel = { workspace = true }
quinn = { workspace = true, features = ["runtime-tokio", "rustls-aws-lc-rs"], optional = true }
rustls = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, features = ["bindgen"], optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, features = ["std"], optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tests-support = { path = "../../tests/support" }

[lints]
workspace = true
