[package]
name = "ombrac-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[features]
default = ["quic"]

tracing = ["dep:tracing"]

datagram = []

quic = [
    "quinn", 
    "rustls", 
    "rustls-pemfile", 
    "aws-lc-rs", 
    "webpki-roots", 
    "rcgen"
]

[dependencies]
ombrac-macros = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "io-util", "macros"] }
tokio-util = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-channel = { workspace = true, features = ["std"] }
auto_impl = { workspace = true }
quinn = { workspace = true, features = ["runtime-tokio", "rustls-aws-lc-rs"], optional = true }
rustls = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, features = ["bindgen"], optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, features = ["std"], optional = true }
rcgen = { workspace = true, features = ["crypto", "aws_lc_rs"], optional = true }
tracing = { workspace = true, optional = true }


[lints]
workspace = true
