[package]
name = "ombrac"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["sync", "net", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["codec"] }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true, features = ["alloc", "serde"] }
moka = { workspace = true, features = ["future"] }
ombrac-macros = { workspace = true }
tracing = { workspace = true, optional = true }

[lints]
workspace = true
