[package]
name = "ombrac"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"

[features]
default = []

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["sync", "net", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["codec"] }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true, features = ["alloc", "serde"] }
moka = { workspace = true, features = ["future"] }

[lints]
workspace = true
