[package]
name = "ombrac-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
udp = ["tokio/sync"]
s2n-quic = ["dep:s2n-quic"]

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util"] }
s2n-quic = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }


[lints]
workspace = true