[package]
name = "ombrac-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[features]
default = [
    "udp", 
    "aws-lc-rs"
]

udp = ["ombrac-protocol/udp"]


[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
clap = { workspace = true, features = ["std", "derive", "color", "help", "usage", "error-context", "suggestions"] }
s2n-quic = { workspace = true, features = ["provider-tls-default", "provider-address-token-default"] }
aws-lc-rs = { workspace = true, features = ["bindgen"], optional = true }
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-rustls", "native-certs"], default-features = false }

ombrac-protocol = { workspace = true, features = ["s2n-quic"] }


[lints]
workspace = true