[package]
name = "ombrac-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ombrac-server"
path = "bin/main.rs"
required-features = ["binary"]

[features]
default = [
    "transport-default",
    "tracing",
    "udp",
]

udp = ["ombrac-protocol/udp"]
tracing = ["dep:tracing"]

transport-default = ["transport-quic"]
transport-quic = ["s2n-quic", "aws-lc-rs", "ombrac-protocol/s2n-quic"]


binary = [
    "clap",
    "tokio/macros",
    "tokio/rt-multi-thread",
    "tracing-subscriber",
]

[dependencies]
ombrac-protocol = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "io-util"] }
clap = { workspace = true, features = ["std", "derive", "color", "help", "usage", "error-context", "suggestions"], optional = true }
s2n-quic = { workspace = true, features = ["provider-tls-default", "provider-address-token-default"], optional = true }
aws-lc-rs = { workspace = true, features = ["bindgen"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["ansi"], optional = true }
hickory-resolver = { workspace = true, features = ["tokio-runtime", "dns-over-rustls", "native-certs"], default-features = false }

[lints]
workspace = true