[package]
name = "tests-integration"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[features]
datagram = [
    "ombrac-client/datagram",
    "ombrac-transport/datagram"
]

[dev-dependencies]
ombrac = { workspace = true }
ombrac-client = { workspace = true }
ombrac-server = { workspace = true }
ombrac-transport = { workspace = true }

rand = { workspace = true, features = ["thread_rng"] }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
curl = { workspace = true }
ntest = { workspace = true }

tests-support = { path = "../support" }


[lints]
workspace = true
